--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://js.tosspayments.com/v1"></script>
   <meta charset="utf-8">
   <!--
   Customize this policy to fit your own app's needs. For more guidance, see:
@@ -16,13 +17,14 @@
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
+  <!-- <script crossorigin src="*"></script> -->
   <link rel="icon" href="static/icons/favicon.ico">
   <title>Practice</title>
-  
   
   <!-- built styles file will be auto injected -->
 </head>
 <body>
+  <script src="https://js.tosspayments.com/v1"></script>
   <div id="app"></div>
   
   <!-- built script files will be auto injected -->
