--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,9 @@
 </head>
 <body>
   <script src="https://js.tosspayments.com/v1"></script>
+  <script src="/socket.io/socket.io.js"></script>
+
   <div id="app"></div>
-  
   <!-- built script files will be auto injected -->
 </body>
 </html>
